Añadidas las correcciones

--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         <div class="toast" id="toast-carta-volteada"></div>
     </div>
     <script type="module" src="src/main.ts"></script>
+    <div id="mensaje-victoria" class="mensaje-oculto">
+        <div class="contenido-victoria">
+          <h2>🎉 ¡Has ganado! 🎉</h2>
+          <p>Felicidades, encontraste todas las parejas</p>
+          <button id="cerrar-mensaje">Cerrar</button>
+        </div>
+      </div>
 </body>
 </html>
